--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
     "next": "15.1.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
